<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_products"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/products"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_scan"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/scan_barcode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_camera"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/take_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
